book/tests/snapshots/snapshot__@language-features__case-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "# Can't yet format & compile\n\nfrom employees\nderive distance = case [\n  city == \"Calgary\" -> 0,\n  city == \"Edmonton\" -> 300,\n  true -> \"Unknown\",\n]\n"
input_file: book/tests/prql/language-features/case-1.prql
---
SELECT
  *,
  CASE
    WHEN city = 'Calgary' THEN 0
    WHEN city = 'Edmonton' THEN 300
    ELSE 'Unknown'
  END AS distance
FROM
  employees

