book/tests/snapshots/snapshot__@language-features__dates-and-times-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from commits\nderive first_prql_commit = @2020-01-01T13:19:55-08:00\n"
input_file: book/tests/prql/language-features/dates-and-times-2.prql
---
SELECT
  *,
  TIMESTAMP '2020-01-01T13:19:55-08:00' AS first_prql_commit
FROM
  commits

