book/tests/snapshots/snapshot__@language-features__dates-and-times-4.prql.snap
---
source: book/tests/snapshot.rs
expression: "# Error expected\n\nderive pi_day = @2017-03-14T15:09:26.535898<datetime>\n"
input_file: book/tests/prql/language-features/dates-and-times-4.prql
---
Error:
   ╭─[:3:44]
   │
 3 │ derive pi_day = @2017-03-14T15:09:26.535898<datetime>
   ·                                            ┬
   ·                                            ╰── unexpected <
───╯
Error:
   ╭─[:3:34]
   │
 3 │ derive pi_day = @2017-03-14T15:09:26.535898<datetime>
   ·                                  ┬
   ·                                  ╰── unexpected :
───╯

